--- a/index.css
+++ b/index.css
@@ -17,19 +17,19 @@
 
 h1 {
     display: block;
-    /* padding-top: 50px; */
-    /* text-align: center;
-    justify-content: center; */
    padding-left: 520px;
     padding-top: 20px;
     color: rgb(251, 250, 248);
-    font-size:xx-large;
+    font-size:40px;
+    font-family: sans-serif;
 }
 
 h3{
     display: block;
     margin-left: 16px;
-    color: rgb(62, 60, 60);
+    color: rgb(98, 97, 97);
+    font-family: sans-serif;
+    font-size: 25px;
 }
 
 #trai{
@@ -48,6 +48,7 @@ h3{
 
 label{
     margin-left: 16px;
+    color: blue;
 }
 
 input[type=text] {
@@ -67,9 +68,8 @@ input[type=text] {
 }
 
 .input-textarea{
-    min-height: 120px;
+    min-height: 190px;
     width: 95%;
-    padding: 80px;
     resize: vertical;
     margin-left: 16px;
     font-family: inherit;
